Use only custom types with non-variable thresholds

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,7 @@ jobs:
         run:
           kosli create attestation-type test-metrics
             --schema=metrics-test.schema.json
-            --jq ".test_count >= .variables.min.test_count"
-            --jq ".total_time <= .variables.max.total_time"
+            --jq ".test_count >= 1"
             --jq ".failure_count == 0"
             --jq ".error_count == 0"
             --jq ".skip_count == 0"
@@ -40,11 +39,7 @@ jobs:
         run:
           kosli create attestation-type coverage-metrics
             --schema=metrics-coverage.schema.json
-            --jq ".test_lines_total <= .variables.max.test_lines_total"
-            --jq ".test_lines_missed <= 0"
-            --jq ".test_branches_total <= 0"
-            --jq ".test_branches_missed <= 0"          
-            --jq ".code_lines_total <= .variables.max.code_lines_total"
-            --jq ".code_lines_missed <= .variables.max.code_lines_missed"
-            --jq ".code_branches_total <= .variables.max.code_branches_total"
-            --jq ".code_branches_missed <= .variables.max.code_branches_missed"
+            --jq ".test_line_total >= 1"
+            --jq ".test_lines_missed == 0"
+            --jq ".test_branches_total == 0"
+            --jq ".test_branches_missed == 0"
