Update custom-coverage metrics type so tests have 10 times less branches than code

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,6 @@ jobs:
             --schema=metrics-coverage.schema.json
             --jq ".test_lines_total >= 1"
             --jq ".test_lines_missed == 0"
-            --jq ".test_branches_total == 0"
+            --jq ".test_branches_total <= 20"
             --jq ".test_branches_missed == 0"
+            --jq ".code_branches_total <= 200"
