--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,8 @@ jobs:
         run:
           kosli create attestation-type coverage-metrics
             --schema=metrics-coverage.schema.json
-            --jq ".test_lines_total >= 1"
-            --jq ".test_lines_missed == 0"
-            --jq ".test_branches_total <= 20"
-            --jq ".test_branches_missed == 0"
-            --jq ".code_branches_total <= 200"
+            --jq ".test.lines.total >= 1"
+            --jq ".test.lines.missed == 0"
+            --jq ".test.branches.total <= 20"
+            --jq ".test.branches.missed == 0"
+            --jq ".code.branches.total <= 200"
